tests/bug_detector_tests/absentPropertyRead5.js
var o = {};
o[1];

var a = 1;
if(Math.random()) a = null;
else if(Math.random()) a = "test";
o[a];
